hard-gists/1191457/run.log
=== Docker Run Log for 1191457 ===
Started at: Mi 29. Okt 11:58:12 CET 2025

[2025-10-29 11:58:13] START: Running container for 1191457
[2025-10-29 11:58:13] SUCCESS: Container f7ca100bae8ff177e98f54c60824da061df631da1910e6b7d5d7c2da133d091a started for 1191457
=== Container logs for 1191457 ===
  File "/snippet.py", line 19
    print "Fail!"
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1191457 ===
[2025-10-29 11:58:15] INFO: Container f7ca100bae8ff177e98f54c60824da061df631da1910e6b7d5d7c2da133d091a has stopped
